# cornerstone-cpp

./: .gitignore  CMakeLists.txt  README.md  makefile
backbone/: CMakeLists.txt  backbone.cpp  backbone.hpp  backbone2.cpp  backbone2.hpp  backbone_typeinfo.cpp  backbone_typeinfo.hpp  includer.hpp  normalize.hpp  pass.cpp  pass.hpp  pass_config.cpp  pass_config.hpp  stack_counter.cpp  stack_counter.hpp  str.hpp  type_expand.hpp  typeinfo.hpp
backbone2/: includer.theory
bbfmt/: CMakeLists.txt  bbfmt.hpp  main.cpp
docs/: bb-grammar.texp  bb-type-tall-grammar.texp  bb-type-tall-str-grammar.texp
driver/: CMakeLists.txt  main.cpp
grammars/: bb-type-tall-str-include.texp  bb-type.texp  bb2-type-tall-str.texp  bb2-type-tall.texp  bb2-type.texp
lib/: CMakeLists.txt  cond.cpp  cond.hpp  config.hpp  gen.cpp  grammar.cpp  grammar.hpp  includer.hpp  io.hpp  matcher.cpp  normalize.hpp  parser.cpp  pass.cpp  pass.hpp  pass_config.cpp  pass_config.hpp  reader.hpp  stack_counter.cpp  stack_counter.hpp
matcher/: CMakeLists.txt  main.cpp
plumber/: CMakeLists.txt  main.cpp
runner/: CMakeLists.txt  main.cpp
select/: CMakeLists.txt  main.cpp  select.hpp
test/: CMakeLists.txt  test.cpp
typeinfo/: CMakeLists.txt  main.cpp
